[project]
name = "apart-sprint-model-2"
version = "0.1.0"
description = "Compute Threshold Staleness Model"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.10.8",
  "numpy>=1.26",
  "pandas>=2.3.3",
  "plotly>=6.5.2",
  "pytest>=8.2",
  "streamlit>=1.53.1",
]

[project.scripts]
ctsm = "ctsm.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
